chore: Roles sanitization
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/bundle/next/eclipse-che/manifests/che-operator.clusterserviceversion.yaml
+++ b/bundle/next/eclipse-che/manifests/che-operator.clusterserviceversion.yaml
@@ -92,7 +92,7 @@ metadata:
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v3
     repository: https://github.com/eclipse-che/che-operator
     support: Eclipse Foundation
-  name: eclipse-che.v7.82.0-842.next
+  name: eclipse-che.v7.83.0-845.next
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -499,49 +499,17 @@ spec:
       clusterPermissions:
         - rules:
             - apiGroups:
-                - ""
-              resources:
-                - nodes
-              verbs:
-                - get
-            - apiGroups:
                 - oauth.openshift.io
               resources:
                 - oauthclients
               verbs:
                 - create
                 - delete
-                - deletecollection
                 - get
                 - list
                 - patch
                 - update
                 - watch
-            - apiGroups:
-                - config.openshift.io
-              resources:
-                - oauths
-              verbs:
-                - get
-                - list
-                - watch
-                - patch
-            - apiGroups:
-                - config.openshift.io
-              resources:
-                - infrastructures
-                - proxies
-              verbs:
-                - get
-                - list
-                - watch
-            - apiGroups:
-                - user.openshift.io
-              resources:
-                - users
-              verbs:
-                - list
-                - delete
             - apiGroups:
                 - user.openshift.io
               resources:
@@ -549,29 +517,51 @@ spec:
               verbs:
                 - get
             - apiGroups:
-                - user.openshift.io
-              resources:
-                - identities
-              verbs:
-                - delete
-            - apiGroups:
                 - console.openshift.io
               resources:
                 - consolelinks
               verbs:
                 - get
-                - list
                 - create
                 - update
-                - patch
+                - delete
+            - apiGroups:
+                - rbac.authorization.k8s.io
+              resources:
+                - roles
+              verbs:
+                - list
+                - create
+                - watch
+                - update
+                - get
+                - delete
+            - apiGroups:
+                - rbac.authorization.k8s.io
+              resources:
+                - rolebindings
+              verbs:
+                - list
+                - create
+                - watch
+                - update
+                - get
+                - delete
+            - apiGroups:
+                - rbac.authorization.k8s.io
+              resources:
+                - clusterroles
+              verbs:
+                - list
+                - create
+                - watch
+                - update
+                - get
                 - delete
             - apiGroups:
                 - rbac.authorization.k8s.io
               resources:
                 - clusterrolebindings
-                - clusterroles
-                - roles
-                - rolebindings
               verbs:
                 - list
                 - create
@@ -582,7 +572,6 @@ spec:
             - apiGroups:
                 - authorization.openshift.io
               resources:
-                - roles
                 - rolebindings
               verbs:
                 - get
@@ -590,14 +579,13 @@ spec:
                 - update
                 - delete
             - apiGroups:
-                - org.eclipse.che
+                - authorization.openshift.io
               resources:
-                - checlusters
-                - checlusters/status
-                - checlusters/finalizers
-                - checlusters/status
+                - roles
               verbs:
-                - '*'
+                - get
+                - create
+                - update
             - apiGroups:
                 - project.openshift.io
               resources:
@@ -612,9 +600,6 @@ spec:
               verbs:
                 - get
                 - list
-                - watch
-                - create
-                - update
             - apiGroups:
                 - ""
               resources:
@@ -626,63 +611,37 @@ spec:
                 - update
                 - watch
             - apiGroups:
-                - ""
-              resources:
-                - pods/exec
-              verbs:
-                - create
-                - get
-            - apiGroups:
                 - apps
               resources:
-                - secrets
+                - replicasets
               verbs:
-                - list
-            - apiGroups:
-                - ""
-              resources:
-                - secrets
-              verbs:
-                - list
                 - get
-                - create
-                - update
+                - list
                 - patch
                 - delete
             - apiGroups:
-                - ""
-              resources:
-                - persistentvolumeclaims
-              verbs:
-                - create
-                - get
-                - list
-                - watch
-                - delete
-            - apiGroups:
-                - ""
-              resources:
-                - pods
-              verbs:
-                - get
-                - list
-                - create
-                - watch
-                - delete
-            - apiGroups:
                 - apps
-                - extensions
               resources:
                 - deployments
-                - replicasets
               verbs:
-                - '*'
+                - list
+                - create
+                - watch
+                - update
+                - get
+                - patch
+                - delete
             - apiGroups:
                 - route.openshift.io
               resources:
                 - routes
               verbs:
-                - '*'
+                - list
+                - create
+                - watch
+                - update
+                - get
+                - delete
             - apiGroups:
                 - route.openshift.io
               resources:
@@ -697,67 +656,32 @@ spec:
                 - list
                 - watch
             - apiGroups:
-                - apps
-              resources:
-                - replicasets
-              verbs:
-                - list
-                - get
-                - patch
-                - delete
-            - apiGroups:
-                - extensions
-              resources:
-                - ingresses
-              verbs:
-                - '*'
-            - apiGroups:
                 - networking.k8s.io
               resources:
                 - ingresses
               verbs:
-                - '*'
-            - apiGroups:
-                - apiextensions.k8s.io
-              resources:
-                - customresourcedefinitions
-              verbs:
-                - get
-                - create
-                - update
-            - apiGroups:
-                - operators.coreos.com
-              resources:
-                - subscriptions
-              verbs:
-                - get
-            - apiGroups:
-                - operators.coreos.com
-              resources:
-                - clusterserviceversions
-              verbs:
                 - list
-                - get
+                - create
                 - watch
+                - update
+                - get
+                - delete
             - apiGroups:
                 - metrics.k8s.io
               resources:
                 - pods
+              verbs:
+                - get
+                - list
+                - watch
+            - apiGroups:
+                - metrics.k8s.io
+              resources:
                 - nodes
               verbs:
                 - get
                 - list
                 - watch
-            - apiGroups:
-                - cert-manager.io
-              resources:
-                - issuers
-                - certificates
-              verbs:
-                - create
-                - get
-                - list
-                - update
             - apiGroups:
                 - ""
               resources:
@@ -769,14 +693,6 @@ spec:
                 - services
               verbs:
                 - '*'
-            - apiGroups:
-                - apps
-              resourceNames:
-                - che-operator
-              resources:
-                - deployments/finalizers
-              verbs:
-                - update
             - apiGroups:
                 - batch
               resources:
@@ -795,6 +711,14 @@ spec:
               verbs:
                 - create
                 - get
+            - apiGroups:
+                - org.eclipse.che
+              resources:
+                - checlusters
+                - checlusters/status
+                - checlusters/finalizers
+              verbs:
+                - '*'
             - nonResourceURLs:
                 - /metrics
               verbs:
@@ -804,13 +728,25 @@ spec:
               resources:
                 - kubernetesimagepullers
               verbs:
-                - '*'
+                - create
+                - delete
+                - get
+                - update
+                - list
             - apiGroups:
                 - config.openshift.io
               resourceNames:
                 - cluster
               resources:
                 - consoles
+              verbs:
+                - get
+            - apiGroups:
+                - config.openshift.io
+              resourceNames:
+                - cluster
+              resources:
+                - proxies
               verbs:
                 - get
             - apiGroups:
@@ -830,9 +766,27 @@ spec:
                 - list
                 - create
             - apiGroups:
+                - ""
+              resources:
+                - pods/exec
+              verbs:
+                - create
+                - get
+            - apiGroups:
                 - workspace.devfile.io
               resources:
                 - devworkspaces
+              verbs:
+                - get
+                - list
+                - watch
+                - create
+                - delete
+                - patch
+                - update
+            - apiGroups:
+                - workspace.devfile.io
+              resources:
                 - devworkspacetemplates
               verbs:
                 - get
@@ -846,6 +800,17 @@ spec:
                 - controller.devfile.io
               resources:
                 - devworkspaceroutings
+              verbs:
+                - get
+                - list
+                - watch
+                - create
+                - delete
+                - patch
+                - update
+            - apiGroups:
+                - controller.devfile.io
+              resources:
                 - devworkspaceoperatorconfigs
               verbs:
                 - get
@@ -1263,7 +1228,7 @@ spec:
   minKubeVersion: 1.19.0
   provider:
     name: Eclipse Foundation
-  version: 7.82.0-842.next
+  version: 7.83.0-845.next
   webhookdefinitions:
     - admissionReviewVersions:
         - v1
