--- a/deploy/deployment/openshift/combined.yaml
+++ b/deploy/deployment/openshift/combined.yaml
@@ -8278,10 +8278,13 @@ rules:
   resources:
   - consolelinks
   verbs:
-  - get
   - create
-  - update
   - delete
+  - get
+  - update
+  - patch
+  - watch
+  - list
 - apiGroups:
   - rbac.authorization.k8s.io
   resources:
@@ -8557,6 +8560,13 @@ rules:
   - limitranges
   verbs:
   - list
+- apiGroups:
+  - monitoring.coreos.com
+  resources:
+  - servicemonitors
+  verbs:
+  - get
+  - create
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
