--- a/bundle/next/eclipse-che/manifests/che-operator.clusterserviceversion.yaml
+++ b/bundle/next/eclipse-che/manifests/che-operator.clusterserviceversion.yaml
@@ -92,7 +92,7 @@ metadata:
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v3
     repository: https://github.com/eclipse-che/che-operator
     support: Eclipse Foundation
-  name: eclipse-che.v7.83.0-857.next
+  name: eclipse-che.v7.83.0-858.next
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -586,6 +586,9 @@ spec:
               verbs:
                 - get
                 - list
+                - watch
+                - create
+                - update
             - apiGroups:
                 - ""
               resources:
@@ -1021,7 +1024,7 @@ spec:
   minKubeVersion: 1.19.0
   provider:
     name: Eclipse Foundation
-  version: 7.83.0-857.next
+  version: 7.83.0-858.next
   webhookdefinitions:
     - admissionReviewVersions:
         - v1
