--- a/config/rbac/cluster_role.yaml
+++ b/config/rbac/cluster_role.yaml
@@ -108,6 +108,9 @@ rules:
     verbs:
       - get
       - list
+      - watch
+      - create
+      - update
   - apiGroups:
       - ""
     resources:
